<resources>
    <string name="app_name">NoFreeRide</string>
    <string name="dollar_sign">$</string>
    <string name="prepare_drive_btn_text">Drive</string>
    <string name="calculate_price_btn_text">Finish</string>
    <string name="pref_ppg_key">ppg</string>
    <string name="pref_ppg_title">PPG</string>
    <string name="pref_mpg_key">mpg</string>
    <string name="pref_mpg_title">MPG</string>
    <string name="pref_insurance_price_key">insurance_price</string>
    <string name="pref_insurance_price_title">Insurance (per month)</string>
    <string name="menu_settings_title">Settings</string>
    <string name="stop_drive_btn_text">End Drive</string>
    <string name="toggle_stop_drive_btn">End Drive</string>
    <string name="pref_maintenance_title">Maintenance (avg per mile)</string>
    <string name="pref_maintenance_key">maintenance</string>
    <string name="pref_include_maintenance_summary">Include maintenance costs</string>
    <string name="pref_include_maintenance_title">Include Maintenance</string>
    <string name="pref_include_maintenance_key">include_maintenance</string>
    <string name="pref_include_insurance_title">Include Insurance</string>
    <string name="pref_include_insurance_key">include_insurance</string>
    <string name="pref_include_insurance_summary">Include insurance costs</string>
    <string name="add_parking">Add Parking</string>
    <string name="mpg_caps">MPG</string>
    <string name="gas_price">Gas Price</string>
    <string name="insurance">Insurance</string>
    <string name="end_drive">End Drive</string>
    <string name="driving">Driving</string>
</resources>
