<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_mpg_title"
        android:key="@string/pref_mpg_key"
        android:defaultValue="20"/>

    <EditTextPreference
        android:title="@string/pref_ppg_title"
        android:key="@string/pref_ppg_key"
        android:defaultValue="3.00"/>

    <EditTextPreference
        android:title="@string/pref_insurance_price_title"
        android:key="@string/pref_insurance_price_key"
        android:defaultValue="60"/>

    <CheckBoxPreference
        android:key="@string/pref_include_insurance_key"
        android:summary="@string/pref_include_insurance_summary"
        android:defaultValue="true"
        />

    <EditTextPreference
        android:title="@string/pref_maintenance_title"
        android:key="@string/pref_maintenance_key"
        android:defaultValue="0.50"/>

    <CheckBoxPreference
        android:key="@string/pref_include_maintenance_key"
        android:summary="@string/pref_include_maintenance_summary"
        android:defaultValue="true"
        />


</PreferenceScreen>