<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_home_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/metrics_container"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="fill_horizontal">

        <LinearLayout
            android:id="@+id/mpg_container"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_miles_per_gallon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textColor="@color/white"
                tools:text="20" />

            <TextView
                android:id="@+id/mpg_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpg_caps"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/gas_price_container"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_price_per_gallon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textColor="@color/white"
                tools:text="$3.63" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_price"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/insurance_container"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/insurance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textColor="@color/white"
                tools:text="$60" />

            <TextView
                android:id="@+id/insurance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_toggle_drive"
        android:layout_width="201dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_button"
        android:text="@string/prepare_drive_btn_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />


    <TextView
        android:id="@+id/tv_total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_toggle_drive"
        app:layout_constraintVertical_bias="0.082" />

    <FrameLayout
        android:id="@+id/riders_frag_container"
        android:layout_width="0dp"
        android:layout_height="292dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>